--- a/hello-client/src/main/resources/application.properties
+++ b/hello-client/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=hello-client
 
 server.port=2222
 
-eureka.client.serviceUrl.defaultZone=http://localhost:1111/eureka/
+eureka.client.serviceUrl.defaultZone=http://girl03:1113/eureka/,http://girl01:1111/eureka/
