--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
+
+spring.application.name=eureka-service
 server.port=1111
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.instance.hostname=girl01
+#eureka.client.register-with-eureka=false
+#eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone=http://girl03:1113/eureka/
